# booking-buddy-hol-day-2

./: .gitignore  CLAUDE.md  README.md  findings.md  hol_201_deck.html  index.html  run_tests.py  setup.py
.claude/skills/: checker.md  helper.md
booking-service/: database.py  main.py  models.py  pyproject.toml  schemas.py  seed.py
booking-service/routers/: bookings.py  cabins.py  guests.py  itineraries.py
booking-service/services/: booking_service.py  itinerary_service.py
booking-service/tests/: conftest.py  test_bookings.py
fleet-service/: database.py  main.py  models.py  pyproject.toml  schemas.py  seed.py
fleet-service/routers/: sailings.py  ships.py
fleet-service/services/: fleet_service.py
fleet-service/tests/: conftest.py  test_fleet.py
loyalty-service/: database.py  main.py  models.py  pyproject.toml  schemas.py  seed.py
loyalty-service/routers/: loyalty.py
loyalty-service/services/: loyalty_service.py
loyalty-service/tests/: conftest.py  test_loyalty.py
mcp/fleet-status/: server.py
mcp/guest-contacts/: server.py
notifications-service/: database.py  main.py  models.py  pyproject.toml  schemas.py  seed.py
notifications-service/routers/: notifications.py
notifications-service/services/: notification_service.py
notifications-service/tests/: conftest.py  test_notifications.py
