[project]
name = "notifications-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pytest>=8.0",
    "httpx>=0.28.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
